# kifuscope

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: 01-overview.md  02-architecture.md  03-usi-yaneuraou.md  04-screen-recognition.md  05-obs-overlay.md  06-progress.md
samples/: calibration.example.json  calibration.kiou-2064x1112.example.json  sfens.txt
samples/templates/: README.md
src/kiou_eval/: __init__.py  __main__.py  config.py
src/kiou_eval/engine/: __init__.py  eval_result.py  usi_parser.py  yaneuraou_client.py
src/kiou_eval/overlay/: overlay.css  overlay.html  overlay.js
src/kiou_eval/recognizer/: __init__.py  board_recognizer.py  calibration.py  capture.py  template_builder.py  templates.py
src/kiou_eval/runtime/: __init__.py  realtime.py
src/kiou_eval/server/: __init__.py  app.py  schemas.py  websocket.py
src/kiou_eval/shogi/: __init__.py  board_state.py  legal_tracker.py  move_notation.py  sfen.py
tests/: test_board_state.py  test_config.py  test_legal_tracker.py  test_move_notation.py  test_recognizer.py  test_server.py  test_sfen.py  test_usi_parser.py  test_yaneuraou_client.py
