[project]
name = "kifuscope"
version = "0.2.0"
description = "棋桜の配信映像向け将棋評価値オーバーレイ"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "cshogi>=0.9.7",
  "fastapi>=0.115",
  "mss>=10.0",
  "numpy>=1.26,<1.27",
  "opencv-python>=4.10,<4.12",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
  "httpx>=0.28",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.9",
]

[project.scripts]
kifuscope = "kiou_eval.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kiou_eval"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["integration: YaneuraOu実体を必要とするテスト"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
allowed-confusables = ["（", "）"]
